--- a/MakeFile
+++ b/MakeFile
@@ -1,4 +1,7 @@
 install requirements:
 	pip install -r requirements.txt
+docker-compose up -d:
+	docker-compose up -d
 uvicorn app.main:app --reload:
 	uvicorn app.main:app --reload	
+
