--- a/MakeFile
+++ b/MakeFile
@@ -2,6 +2,6 @@ install requirements:
 	pip install -r requirements.txt
 docker-compose up -d:
 	docker-compose up -d
-uvicorn app.main:app --reload:
-	uvicorn app.main:app --reload	
+uvicorn api.main:app --reload:
+	uvicorn api.main:app --reload	
 
